# IE582-Fall2022

./: README.md
HW1/: HW1HongliangLi.md  IE582HW1.ipynb  readme.md
HW2/: 2018_data.csv  2021_data.csv  Submission2.ipynb
IE582Project/: .gitignore  FI.csv  Makefile  PCA.ipynb  Presentation1.pptx  ProjectJC.ipynb  README.md  SHAP without test train.ipynb  build_food_insecurity_index.py  build_food_insecurity_map.py  calculateIndex.ipynb  df20.csv  pyproject.toml  requirements.txt  shape values.csv  sync_vercel_deploy.sh  xgboostRegression.ipynb
IE582Project/data/interim/: pcaAfter_data.csv
IE582Project/data/raw/: average FI.xlsx
IE582Project/map/: FIVI.csv  index.csv
IE582Project/notebooks/: 01_pipeline_run_and_review.ipynb
IE582Project/notebooks/legacy/: XGboost regressor.ipynb  covidEffect_Untitled.ipynb
IE582Project/src/ie582_food_insecurity/: __init__.py  cli.py  map_cli.py  pipeline.py  visualization.py
IE582Project/vercel_deploy/: README.md
